@@ -53,6 +53,19 @@
                        :main-opts ["-m" "clj-kondo.main"]}
 
            ;;
+           ;; Deployment
+           ;; 
+           :jar {:replace-deps {seancorfield/depstar {:mvn/version "2.0.171"}}
+                 :exec-fn hf.depstar/jar
+                 :exec-args {:jar "target/test-doc-blocks.jar"
+                             :jar-type :thin}}
+
+           :deploy {:replace-deps {slipset/deps-deploy "0.1.5"}
+                    :exec-fn deps-deploy.deps-deploy/deploy
+                    :exec-args {:installer :remote
+                                :artifact "target/test-doc-blocks.jar"}}
+
+           ;;
            ;; Script deps
            ;;
            :script {:extra-paths ["script"]}}}
