@@ -1,0 +1,3 @@
+{:major 1 
+ :minor 0 
+ :qualifier "alpha"}
